--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 <html>
   <head>
-        <title>S3M: Semantic Segmentation Sparse Mapping for UAVs with RGB-D Camera</title>
+        <title>Object-Oriented Semantic Mapping for Reliable UAVs Navigation</title>
         <meta property="og:title" content="SE3HamDL" />
         <meta property="og:image" content="" />
         <meta property="og:url" content="" />
@@ -137,7 +137,7 @@ code {
   <body>
     <br>
     <center>
-    <span style="font-size:42px">S3M: Semantic Segmentation Sparse Mapping for UAVs with RGB-D Camera</span>
+    <span style="font-size:42px">Object-Oriented Semantic Mapping for Reliable UAVs Navigation</span>
     
     </center>
 
@@ -150,18 +150,7 @@ code {
          </center>
          </td>
 
-         <td align=center width=150px>
-         <center>
-         <span style="font-size:20px"> Van-Truong Nguyen </span>
-         </center>
-         </td>
-
-         <td align=center width=150px>
-         <center>
-         <span style="font-size:20px"><a href="https://sites.google.com/site/xiemhoang/home?authuser=0">Xiem HoangVan</a></span>
-         </center>
-         </td>
-        <td align=center width=150px>
+       <td align=center width=150px>
         <center>
         <span style="font-size:20px"><a href="https://aelibol.github.io/">Armagan Elibol</a></span>
         </center>
@@ -171,6 +160,11 @@ code {
           <span style="font-size:20px"><a href="https://www.jaist.ac.jp/robot/">Nak Young Chong</a></span>
           </center>
           </td>
+        <td align=center width=150px>
+          <center>
+          <span style="font-size:20px"><a href="https://sites.google.com/site/xiemhoang/home?authuser=0">Xiem HoangVan</a></span>
+          </center>
+        </td>
      </tr>
     </table>
 
