--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ code {
                         <td width=600px>
                           <center>
                             <video  width="900" muted autoplay loop>
-                              <source src="docs/mp4/sim.mp4" type="video/mp4">
+                              <source src="docs/mp4/video_demo.mp4" type="video/mp4">
                               Your browser does not support the video tag.
                               </video>
                         </center>
@@ -275,7 +275,7 @@ code {
                 <tr>
                     <td width=900px>
                       <center>
-                          <a href="docs/images/ProposedSystem.png"><img src = "docs/images/ProposedSystem.png" width="900px"></img></href></a><br>
+                          <a href="docs/images/proposed_system.png"><img src = "docs/images/proposed_system.png" width="900px"></img></href></a><br>
                     </center>
                     </td>
                 </tr>
@@ -291,7 +291,7 @@ code {
                 <tr>
                     <td width=600px>
                       <center>
-                          <a href="docs/images/poseEst.png"><img src = "docs/images/poseEst.png" width="800px"></img></href></a><br>
+                          <a href="docs/images/semExt.png"><img src = "docs/images/semExt.png" width="800px"></img></href></a><br>
                     </center>
                     </td>
                 </tr>
@@ -307,7 +307,7 @@ code {
                 <tr>
                     <td width=900px>
                       <center>
-                          <a href="docs/images/semseg.png"><img src = "docs/images/semseg.png" width="800px"></img></href></a><br>
+                          <a href="docs/images/Clus.png"><img src = "docs/images/Clus.png" width="800px"></img></href></a><br>
                     </center>
                     </td>
                 </tr>
@@ -323,10 +323,17 @@ code {
                 <tr>
                     <td width=900px>
                       <center>
-                          <a href="docs/images/fusion.png"><img src = "docs/images/fusion.png" width="900px"></img></href></a><br>
+                          <a href="docs/images/SemAss.png"><img src = "docs/images/SemAss.png" width="900px"></img></href></a><br>
                     </center>
                     </td>
                 </tr>
+                <tr>
+                  <td width=900px>
+                    <center>
+                        <a href="docs/images/SemAss2.png"><img src = "docs/images/SemAss2.png" width="900px"></img></href></a><br>
+                  </center>
+                  </td>
+              </tr>
                     <td width=900px>
                       <center>
                           <span style="font-size:18px"><i> To fuse semantic information from multiple view, we introduced semantic fusion scheme.</i>
@@ -361,56 +368,13 @@ code {
                     </td>
                 </tr>
 -->
-            </table>
-            <br><br>
-                <table align=center width=900px>
-                <tr>
-                    <td width=900px>
-                      <center>
-                          <a href="docs/images/tpe.png"><img src = "docs/images/tpe.png" width="800px"></img></href></a><br>
-<!--
-                    <a href="./resources/gif/data1.gif"><img src = "./resources/gif/data1.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data2.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data11.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data15.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data14.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data13.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data18.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data21.gif" width="260px"></img></href></a>
-                    <a href="./resources/gif/data2.gif"><img src = "./resources/gif/data4.gif" width="260px"></img></href></a>
--->
-                <!-- <video  width="440" muted autoplay loop>
-                <source src="resources/images/data_1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video>
-                         <a href="./resources/images/Drone1.jpg"><img src = "./resources/images/Drone1.jpg" width="440px"></img></href></a> 
-                    <br>
-                                          <video  width="440" muted autoplay loop>
-                <source src="resources/images/data_2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video>
-                                          <video  width="440" muted autoplay loop>
-                <source src="resources/images/data_3.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video> -->
-
-                    </center>
-                    </td>
-                </tr>
-                    <td width=900px>
-                      <center>
-                          <span style="font-size:18px"><i> Comparison of trajectory for ORB-SLAM2, Our system and ground truth in X-Y and X-Z axis.</i>
-                    </center>
-                    </td>
-                </tr> 
-            </table>
-
+            
             <br><br>
             <table align=center width=600px>
             <tr>
                 <td width=900px>
                   <center>
-                      <a href="docs/images/rpe.png"><img src = "docs/images/rpe.png" width="600px"></img></href></a><br>
+                      <a href="docs/images/SemMap.png"><img src = "docs/images/SemMap.png" width="600px"></img></href></a><br>
                 </center>
                 </td>
             </tr>
@@ -427,7 +391,7 @@ code {
             <tr>
                 <td width=900px>
                   <center>
-                      <a href="docs/images/visual.png"><img src = "docs/images/visual.png" width="800px"></img></href></a><br>
+                      <a href="docs/images/SafeNav.png"><img src = "docs/images/SafeNav.png" width="800px"></img></href></a><br>
                 </center>
                 </td>
             </tr>
