--- a/index.html
+++ b/index.html
@@ -445,25 +445,25 @@ code {
               <br>
               </center></tr> -->
               <tr><left> <br>
-                          <span style="font-size:18px">1.  Canh T. N., Nguyen V-T, HoangVan X., Elibol A., Chong A.Y. <a href='https://thanhnguyencanh.github.io/probabilistic_semantic_mapping/'>S3M: Semantic Segmentation Sparse Mapping for UAVs with RGB-D Camera</a>. Symposium on System Integration (SII), 2024.
+                          <span style="font-size:18px">1.  Canh T. N., Elibol A., Chong A.Y., HoangVan X. <a href='https://thanhnguyencanh.github.io/probabilistic_semantic_mapping/'>Object-Oriented Semantic Mapping for Reliable UAVs Navigation</a>. International Conference on Control, Automation and Information Sciences (ICCAIS), 2023.
 
                           
               <br><br>
-                              <code>@inproceedings{canh2024s3m, 
+                              <code>@inproceedings{canh2023object, 
                                   <br>
-                                    author    = {Canh, Thanh Nguyen and Nguyen, Van-Truong and HoangVan, Xiem and Elibol, Armagan and Chong, Nak Young}, 
+                                    author    = {Canh, Thanh Nguyen and Elibol, Armagan and Chong, Nak Young and HoangVan, Xiem}, 
                                   <br>
-                                    title     = {{S3M: Semantic Segmentation Sparse Mapping for UAVs with RGB-D Camera}}, 
+                                    title     = {{Object-Oriented Semantic Mapping for Reliable UAVs Navigation}}, 
                                   <br>
-                                    booktitle = {2024 IEEE/SICE International Symposium on System Integration (SII)}, 
+                                    booktitle = {2023 12th International Conference on Control, Automation and Information Sciences (ICCAIS)}, 
                                   <br>
-                                    year      = {2024}, 
+                                    year      = {2023}, 
                                   <br>
                                     address   = {Vietnam}, 
                                   <br>
-                                    month     = {Jan}, 
+                                    pages     = {139--144}, 
                                   <br>
-                                    DOI       = {10.1109/SII58957.2024.10417379}
+                                    DOI       = {10.1109/ICCAIS59597.2023.10382351}
                                   <br>
                                 } 
                               </code>
