--- a/index.html
+++ b/index.html
@@ -277,11 +277,6 @@ code {
                     </center>
                     </td>
                 </tr>
-                    <td width=900px>
-                      <center>
-                          <span style="font-size:18px"><i>3D Pose Estimation.</i>
-                    </center>
-                    </td>
                 </tr>
             </table>
                 <br><br>
@@ -295,7 +290,7 @@ code {
                 </tr>
                     <td width=900px>
                       <center>
-                          <span style="font-size:18px"><i>Structure and method for semantic extraction</i>
+                          <span style="font-size:18px"><i>Semantic Knowledge Understanding</i>
                     </center>
                     </td>
                 </tr>
@@ -305,20 +300,20 @@ code {
                 <tr>
                     <td width=900px>
                       <center>
-                          <a href="docs/images/SemAss.png"><img src = "docs/images/SemAss.png" width="900px"></img></href></a><br>
+                          <a href="docs/images/SemAss.png"><img src = "docs/images/SemAss.png" width="600px"></img></href></a><br>
                     </center>
                     </td>
                 </tr>
                 <tr>
                   <td width=900px>
                     <center>
-                        <a href="docs/images/SemAss2.png"><img src = "docs/images/SemAss2.png" width="900px"></img></href></a><br>
+                        <a href="docs/images/SemAss2.png"><img src = "docs/images/SemAss2.png" width="600px"></img></href></a><br>
                   </center>
                   </td>
               </tr>
                     <td width=900px>
                       <center>
-                          <span style="font-size:18px"><i> To fuse semantic information from multiple view, we introduced semantic fusion scheme.</i>
+                          <span style="font-size:18px"><i> Semantic Association.</i>
                     </center>
                     </td>
                 </tr>
