--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@ code {
             <tr>
                 <td width=900px>
                   <center>
-                      <a href="docs/images/SemMap.png"><img src = "docs/images/SemMap.png" width="600px"></img></href></a><br>
+                      <a href="docs/images/SemMap.png"><img src = "docs/images/SemMap.png" width="800px"></img></href></a><br>
                 </center>
                 </td>
             </tr>
                 <td width=900px>
                   <center>
-                      <span style="font-size:18px"><i> Comparison of Relative Rose Error (RPE) between ORB-SLAM2 and our system.</i>
+                      <span style="font-size:18px"><i> Semantic Mapping.</i>
                 </center>
                 </td>
             </tr>
@@ -353,7 +353,7 @@ code {
             </tr>
                 <td width=900px>
                   <center>
-                      <span style="font-size:18px"><i> 3D visual representation of the obtained semantic maps.</i>
+                      <span style="font-size:18px"><i> Safety Navigation.</i>
                 </center>
                 </td>
             </tr>
